# sand-box2d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-vita.yml  build-windows.yml  build.yml
assets/default-settings/: linux.json  vita.json
docs/: README.md  commenting.md  comments.md  conventions.md  cross-platform.md  dependencies-TOBERENAMED-WHYTF-UR-CASEUNSENSITIVE.md  dependencies.md  naming.md  platforms.md
src/: game-manager.cpp  game-manager.hpp  main.cpp  main.hpp
src/models/: level.hpp
src/models/physians/: physian.cpp  physian.hpp
src/models/scenes/: scene-main.cpp  scene-main.hpp  scene-test1.cpp  scene-test1.hpp  scene-test2.cpp  scene-test2.hpp  scene.hpp
src/models/screens/: screen-main.hpp  screen.hpp
src/platform/controls/: controls.hpp
src/platform/controls/sdl2/: controls.cpp
src/platform/controls/vita/: controls.cpp
src/platform/font-manager/: font-manager.hpp
src/platform/imgui/: imgui.hpp
src/platform/imgui-manager/: imgui-manager.hpp
src/platform/imgui-manager/sdl2/: imgui-manager.cpp
src/platform/imgui-manager/sdl2-vita/: imgui-manager.cpp
src/platform/low-level/: low-level.hpp
src/platform/low-level/low-level-vita/: low-level.cpp
src/platform/low-level/std/: low-level.cpp
src/platform/low-level/vita/: low-level.cpp
src/platform/renderer/: renderer.hpp
src/platform/renderer/renderer-sdl2/: renderer.cpp
src/platform/renderer/sdl2/: renderer-sdl2.cpp  renderer-sdl2.hpp  renderer.cpp
src/platform/renderer/test/: renderer-test.cpp  renderer.cpp
src/renderer/: renderer.hpp
src/renderer/renderer-sdl2/: renderer-sdl2.cpp
src/system/: game-manager.hpp  scene-manager.cpp  scene-manager.hpp  settings.cpp  settings.hpp
